--- a/templates/react.html
+++ b/templates/react.html
@@ -6,7 +6,8 @@
 </div>
 
 <div id="main-content" class="large-9 columns">
-  <h1>Mainstuff</h1>
+  <h1>Golden Tweet NLTK</h1>
+  <button id="submit">Start processing</button>
 
   <div id="content"></div>
   <script type="text/jsx;harmony=true" src="static/js/react_test.js"></script>
