--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,7 @@
    		<script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
      	<script type="text/javascript" src="static/js/jquery.js"></script>
      	<script type="text/javascript" src="static/js/foundation.min.js"></script>
+     	<script type="text/javascript" src="static/js/submit.js"></script>
 
 	</head>
 
