--- a/templates/react.html
+++ b/templates/react.html
@@ -2,13 +2,32 @@
 {% block body %}
 
 <div id="sidebar" class="large-3 columns">
-  <h1>Sidebar</h1>
+  <h1>Menu</h1>
+	<button id="host">Host</button>
+	<button class="awards" id="all">All Awards</button>
+	<button class="awards" id="Best Motion Picture - Drama">Best Motion Picture - Drama</button>
+	<button class="awards" id="Best Motion Picture - Musical_Comedy">Best Motion Picture - Musical/Comedy</button>
+	<button class="awards" id="Best Actor in a Motion Picture - Drama">Best Actor in a Motion Picture - Drama</button>
+	<button class="awards" id="Best Actress in a Motion Picture - Drama">Best Actress in a Motion Picture - Drama</button>
+	<button class="awards" id="Best Actor in a Motion Picture - Musical_Comedy">Best Actor in a Motion Picture - Musical/Comedy</button>
+	<button class="awards" id="Best Actress in a Motion Picture - Musical_Comedy">Best Actress in a Motion Picture - Musical/Comedy</button>
+	<button class="awards" id="Best Supporting Actor in a Motion Picture - Drama_Musical_Comedy">Best Supporting Actor in a Motion Picture - Drama/Musical/Comedy</button>
+	<button class="awards" id="Best Supporting Actress in a Motion Picture - Drama_Musical_Comedy">Best Supporting Actress in a Motion Picture - Drama/Musical/Comedy</button>
+	<button class="awards" id="Best Director">Best Director</button>
+	<button class="awards" id="Best Screenplay">Best Screenplay</button>
+	<button class="awards" id="Best Original Score">Best Original Score</button>
+	<button class="awards" id="Best Original Song">Best Original Song</button>
+	<button class="awards" id="Best Animated Feature Film">Best Animated Feature Film</button>
+	<button class="awards" id="Best Foreign Language Film">Best Foreign Language Film</button>
 </div>
 
 <div id="main-content" class="large-9 columns">
   <h1>Golden Tweet NLTK</h1>
-  <button id="submit">Start processing</button>
-
+  <button class="submit" id="2013">Start processing 2013 data</button>
+  <button class="submit" id="2015">Start processing 2015 data</button>
+  <div class="load_wrapper">
+  	<div class="loader">Loading...</div>
+	</div>
   <div id="content"></div>
   <script type="text/jsx;harmony=true" src="static/js/react_test.js"></script>
 </div>
