move spinner + change css

--- a/templates/react.html
+++ b/templates/react.html
@@ -26,7 +26,7 @@
   <button class="submit" id="2013">Start processing 2013 data</button>
   <button class="submit" id="2015">Start processing 2015 data</button>
   <div class="load_wrapper">
-  	<div class="loader">Loading...</div>
+  	<div class="loader"></div>
 	</div>
   <div id="content"></div>
   <script type="text/jsx;harmony=true" src="static/js/react_test.js"></script>
