--- a/templates/react.html
+++ b/templates/react.html
@@ -19,6 +19,12 @@
 	<button class="awards" id="Best Original Song">Best Original Song</button>
 	<button class="awards" id="Best Animated Feature Film">Best Animated Feature Film</button>
 	<button class="awards" id="Best Foreign Language Film">Best Foreign Language Film</button>
+	<a href="#" class="button" data-dropdown="drop">Link Dropdown &raquo;</a>
+	<ul id="drop" class="[tiny small medium large content]f-dropdown" data-dropdown-content>
+	  <li><a href="#">This is a link</a></li>
+	  <li><a href="#">This is another</a></li>
+	  <li><a href="#">Yet another</a></li>
+	</ul>
 </div>
 
 <div id="main-content" class="large-9 columns">
