front-end changes

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,6 @@
 #sidebar{
 	background-color: #4e015c;
-	min-height:100%;
+	min-height:120%;
 	border-width: 10px;
 	border-style: solid;
 	border-left-style: none;
@@ -12,6 +12,18 @@
 }
 #main-content{
 	background-color: #FFFFFF;
+}
+
+.DataList div:nth-child(even){
+  background-color: #F5F5F5;
+}
+
+.DataList div:nth-child(odd){
+  background-color: #D3D3D3;
+}
+
+.dataaward{
+  font-style: bold;
 }
 
 .color{
@@ -96,3 +108,4 @@
     transform: rotate(360deg);
   }
 }
+
