added finding best dressed people stretch goal

--- a/templates/react.html
+++ b/templates/react.html
@@ -5,6 +5,7 @@
   <h1>Menu</h1>
 	<button id="host">Host</button>
 	<button class="awards" id="all">All Awards</button>
+	<button id="best-dressed-submit">Best dressed image feed</button>
 	<div class="row">
 		<button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="button dropdown small-centered large-centered">Choose an award</button><br>
 		<ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true" tabindex="-1">
@@ -33,6 +34,12 @@
   <div class="load_wrapper">
   	<div class="loader"></div>
 	</div>
+<!--   <iframe src='https://vine.co/v/ODmjuxazWAv/embed/postcard' width='600' height='600' frameborder='0'></iframe><script src='https://platform.vine.co/static/scripts/embed.js'></script> -->
+
+  <div id="best-dressed-images">
+
+  </div>
+
   <div id="content"></div>
   <script type="text/jsx;harmony=true" src="static/js/react_test.js"></script>
 </div>
