--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,6 @@
 #sidebar{
 	background-color: #4e015c;
-	min-height:200%;
+	min-height:100%;
 	border-width: 10px;
 	border-style: solid;
 	border-left-style: none;
@@ -30,7 +30,7 @@
 	background-color: #C29EE5;
 }
 .awards{
-	font-size: 10px;
+	/*font-size: 10px;*/
 }
 .all{
 	font-size: 14px;
