--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="static/css/index.css">
+		<link rel="stylesheet" href="static/css/style.css">
 		<link rel="stylesheet" href="static/css/foundation.min.css">
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.js"></script>
     	<script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/JSXTransformer.js"></script>
