--- a/templates/react.html
+++ b/templates/react.html
@@ -1,61 +1,58 @@
 {% extends "layout.html" %}
 {% block body %}
 
-<div id="sidebar" class="large-3 columns">
-  <h1>Menu</h1>
-	<button id="host">Host</button>
-	<button class="awards" id="all">All Awards</button>
-	<button id="best-dressed-submit">Best dressed image feed</button>
-	<div class="row">
-		<button href="#" data-dropdown="drop1" aria-controls="drop1" aria-expanded="false" class="button dropdown small-centered large-centered">Choose an award</button><br>
-		<ul id="drop1" data-dropdown-content class="f-dropdown" aria-hidden="true" tabindex="-1">
-			<li><a href='#' class= "awards" id="Best Motion Picture - Drama"> Best Motion Picture - Drama</a></li></a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actress in a Motion Picture - Drama"> Best Performance by an Actress in a Motion Picture - Drama</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actor in a Motion Picture - Drama">Best Performance by an Actor in a Motion Picture - Drama</a></li>
-			<li><a href='#' class= "awards" id="Best Motion Picture - Comedy Or Musical"> Best Motion Picture - Comedy Or Musical</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actress in a Motion Picture - Comedy Or Musical"> Best Performance by an Actress in a Motion Picture - Comedy Or Musical</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actor in a Motion Picture - Comedy Or Musical"> Best Performance by an Actor in a Motion Picture - Comedy Or Musical</a></li>
-			<li><a href='#' class= "awards" id="Best Animated Feature Film"> Best Animated Feature Film</a></li>
-			<li><a href='#' class= "awards" id="Best Foreign Language Film"> Best Foreign Language Film</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actress In A Supporting Role in a Motion Picture"> Best Performance by an Actress In A Supporting Role in a Motion Picture</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actor In A Supporting Role in a Motion Picture">Best Performance by an Actor In A Supporting Role in a Motion Picture</a></li>
-			<li><a href='#' class= "awards" id="Best Director - Motion Picture"> Best Director - Motion Picture</a></li>
-			<li><a href='#' class= "awards" id="Best Screenplay - Motion Picture"> Best Screenplay - Motion Picture</a></li>
-			<li><a href='#' class= "awards" id="Best Original Score - Motion Picture"> Best Original Score - Motion Picture</a></li>
-			<li><a href='#' class= "awards" id="Best Original Song - Motion Picture">Best Original Song - Motion Picture</a></li>
-			<li><a href='#' class= "awards" id="Best Television Series - Drama"> Best Television Series - Drama</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actress In A Television Series - Drama">Best Performance by an Actress In A Television Series - Drama</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actor In A Television Series - Drama"> Best Performance by an Actor In A Television Series - Drama</a></li>
-			<li><a href='#' class= "awards" id="Best Television Series - Comedy Or Musical">Best Television Series - Comedy Or Musical</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actress In A Television Series - Comedy Or Musical">Best Performance by an Actress In A Television Series - Comedy Or Musical </a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actor In A Television Series - Comedy Or Musical"> Best Performance by an Actor In A Television Series - Comedy Or Musical</a></li>
-			<li><a href='#' class= "awards" id="Best Mini-Series Or Motion Picture Made for Television"> Best Mini-Series Or Motion Picture Made for Television</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actress In A Mini-series or Motion Picture Made for Television"> Best Performance by an Actress In A Mini-series or Motion Picture Made for Television</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actor in a Mini-Series or Motion Picture Made for Television">Best Performance by an Actor in a Mini-Series or Motion Picture Made for Television </a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actress in a Supporting Role in a Series, Mini-Series or Motion Picture Made for Television"> Best Performance by an Actress in a Supporting Role in a Series, Mini-Series or Motion Picture Made for Television</a></li>
-			<li><a href='#' class= "awards" id="Best Performance by an Actor in a Supporting Role in a Series, Mini-Series or Motion Picture Made for Television">Best Performance by an Actor in a Supporting Role in a Series, Mini-Series or Motion Picture Made for Television</a></li>
-			<li><a href='#' class= "awards" id="Cecil B. DeMille Award">Cecil B. DeMille Award</a></li>
-		</ul>
-	</div>
-
+<section id="sidebar">
+	<h2>Select Data to Display</h2>
+	<h4>Meta Data</h4>
+	<ul>
+		<li>Hosts</li>
+		<li>Best dressed image feed</li>
 	</ul>
-</div>
+	<h4>Awards</h4>
+	<ul>
+		<li>All Awards</li>
+		<li>Best Motion Picture - Drama</li>
+		<li>Best Performance by an Actress in a Motion Picture - Drama</li>
+		<li>Best Performance by an Actor in a Motion Picture - Drama</li>
+		<li>Best Motion Picture - Comedy or Musical</li>
+		<li>Best Performance by an Actress in a Motion Picture - Comedy or Musical</li>
+		<li>Best Performance by an Actor in a Motion Picture - Comedy or Musical</li>
+		<li>Best Animated Feature Film</li>
+		<li>Best Foreign Language Film</li>
+		<li>Best Performance by an Actress in a Supporting Role in a Motion Picture</li>
+		<li>Best Performance by an Actor in a Supporting Role in a Motion Picture</li>
+		<li>Best Director - Motion Picture</li>
+		<li>Best Screenplay - Motion Picture</li>
+		<li>Best Original Score - Motion Picture</li>
+		<li>Best Original Song - Motion Picture</li>
+		<li>Best Television Series - Drama</li>
+		<li>Best Performance by an Actress in a Television Series - Drama</li>
+		<li>Best Performance by an Actor in a Television Series - Drama</li>
+		<li>Best Television Series - Comedy or Musical</li>
+		<li>Best Performance by an Actress in a Television Series - Comedy or Musical</li>
+		<li>Best Performance by an Actor in a Television Series - Comedy or Musical</li>
+		<li>Best Mini-Series or Motion Picture Made for Television</li>
+		<li>Best Performance by an Actress in a Mini-Series or Motion Picture Made for Television</li>
+		<li>Best Performance by an Actor in a Mini-Series or Motion Picture Made for Television</li>
+		<li>Best Performance by an Actress in a Supporting Role in a Series, Mini-Series, or Motion Picture Made for Television</li>
+		<li>Best Performance by an Actor in a Supporting Role in a Series, Mini-Series, or Motion Picture Made for Television</li>
+		<li>Cecil B. DeMille Award</li>
+	</ul>
+</section>
 
-<div id="main-content" class="large-9 columns">
-  <h1>Golden Tweet Processing</h1>
-  <button class="submit" id="2013">Start processing 2013 data</button>
-  <button class="submit" id="2015">Start processing 2015 data</button>
-  <div class="load_wrapper">
-  	<div class="loader"></div>
+
+<section id="main">
+	<h1>Golden Tweet Processing</h1>
+	<button id="2013">Process 2013 data</button>
+	<button id="2015">Process 2015 data</button>
+	<div class="load_wrapper">
+		<div class="loader"></div>
 	</div>
-<!--   <iframe src='https://vine.co/v/ODmjuxazWAv/embed/postcard' width='600' height='600' frameborder='0'></iframe><script src='https://platform.vine.co/static/scripts/embed.js'></script> -->
+	<div id="best-dressed-images"></div>
 
-  <div id="best-dressed-images">
+	<div id="content"></div>
+	<script type="text/jsx;harmony=true" src="static/js/react_test.js"></script>
+</section>
 
-  </div>
-
-  <div id="content"></div>
-  <script type="text/jsx;harmony=true" src="static/js/react_test.js"></script>
-</div>
 
 {% endblock %}
