--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,37 +7,74 @@ label, table, caption {
   margin: 0;
   padding: 0; }
 
+body {
+  background: url("../img/twitter-bg.png") no-repeat;
+  background-color: #C0DEED; }
+  body main {
+    margin: 15px auto 0 auto;
+    width: 80%;
+    overflow: auto; }
+
+header {
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 1px 0px #aaa; }
+  header div#header-inner {
+    margin: 0 auto;
+    padding: 7px 0;
+    width: 80%;
+    overflow: auto; }
+    header div#header-inner h1 {
+      display: inline-block;
+      padding: 7px 0;
+      font-size: 17px;
+      color: #66757f; }
+    header div#header-inner button {
+      float: right;
+      padding: 3px 5px;
+      width: 60px;
+      font-size: 9px;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer; }
+    header div#header-inner button:hover {
+      opacity: 0.9; }
+    header div#header-inner button:nth-child(2) {
+      margin-right: 3px;
+      background-color: #0084B4;
+      border: 1px solid #1370B4; }
+    header div#header-inner button:nth-child(3) {
+      margin-right: 10px;
+      background-color: #FFAC33;
+      border: 1px solid #FF9B36; }
+
 section#sidebar {
-  position: fixed;
   float: left;
   padding: 10px;
   width: 250px;
-  height: 100%;
-  background-color: #eee;
-  border-right: 1px solid #000;
+  background-color: #fff;
+  border-radius: 5px;
   overflow-y: scroll; }
-  section#sidebar h2 {
-    margin: 10px 0;
-    font-size: 19px;
-    color: #444; }
   section#sidebar h4 {
-    font-size: 14px;
-    color: #666; }
+    font-size: 13px;
+    color: #555; }
   section#sidebar ul {
     margin: 5px 0;
     padding-left: 15px;
     list-style: none; }
     section#sidebar ul li {
-      padding: 3px 0;
-      font-size: 13px;
-      color: #666;
-      border-bottom: 1px solid #ddd;
+      padding: 4px 0;
+      font-size: 12px;
+      color: #0084B4;
       cursor: pointer; }
     section#sidebar ul li:hover {
-      background-color: #ddd; }
+      background-color: #f5f5f5; }
 
 section#main {
   float: right;
   width: calc(100% - 300px); }
+  section#main h1 {
+    margin: 20px 0; }
 
 /*# sourceMappingURL=style.css.map */
