--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -10,26 +10,73 @@ label, table, caption, {
 	padding: 0;
 }
 
+body {
+	background: url('../img/twitter-bg.png') no-repeat;
+	background-color: #C0DEED;
+
+	main {
+		margin: 15px auto 0 auto;
+		width: 80%;
+		overflow: auto;
+	}
+}
+
+
+header {
+	width: 100%;
+	background-color: #fff;
+	box-shadow: 0 1px 0px #aaa;
+
+	div#header-inner {
+		margin: 0 auto;
+		padding: 7px 0;
+		width: 80%;
+		overflow: auto;
+
+		h1 {
+			display: inline-block;
+			padding: 7px 0;
+			font-size: 17px;
+			color: #66757f;
+		}
+		button {
+			float: right;
+			padding: 3px 5px;
+			width: 60px;
+			font-size: 9px;
+			color: #fff;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+		}
+		button:hover {
+			opacity: 0.9;
+		}
+		button:nth-child(2) {
+			margin-right: 3px;
+			background-color: #0084B4;
+			border: 1px solid #1370B4;
+		}
+		button:nth-child(3) {
+			margin-right: 10px;
+			background-color: #FFAC33;
+			border: 1px solid #FF9B36;
+		}
+	}
+}
 
 
 section#sidebar {
-	position: fixed;
 	float: left;
 	padding: 10px;
 	width: 250px;
-	height: 100%;
-	background-color: #eee;
-	border-right: 1px solid #000;
+	background-color: #fff;
+	border-radius: 5px;
 	overflow-y: scroll;
 
-	h2 {
-		margin: 10px 0;
-		font-size: 19px;
-		color: #444;
-	}
 	h4 {
-		font-size: 14px;
-		color: #666;
+		font-size: 13px;
+		color: #555;
 	}
 	ul {
 		margin: 5px 0;
@@ -37,14 +84,13 @@ section#sidebar {
 		list-style: none;
 
 		li {
-			padding: 3px 0;
-			font-size: 13px;
-			color: #666;
-			border-bottom: 1px solid #ddd;
+			padding: 4px 0;
+			font-size: 12px;
+			color: #0084B4;
 			cursor: pointer;
 		}
 		li:hover {
-			background-color: #ddd;
+			background-color: #f5f5f5;
 		}
 	}
 }
@@ -52,4 +98,10 @@ section#sidebar {
 section#main {
 	float: right;
 	width: calc(100% - 300px);
+
+	h1 {
+		margin: 20px 0;
+	}
 }
+
+
