--- a/templates/react.html
+++ b/templates/react.html
@@ -51,14 +51,25 @@
 
 
 	<section id="main">
-		<h1>Golden Tweet Processing</h1>
+		<h1>Results</h1>
 		<div class="load_wrapper">
 			<div class="loader"></div>
 		</div>
-		<div id="best-dressed-images"></div>
 
+		<div id="best-dressed-images"></div>
 		<div id="content"></div>
+
 		<script type="text/jsx;harmony=true" src="static/js/react_test.js"></script>
+	</section>
+
+	<section id="creators">
+		<h2>Created by</h2>
+		<ul>
+			<li>Grant Nicholas</li>
+			<li>Sen Lu Tom Chen</li>
+			<li>Ryan Madden</li>
+			<li>Jon Rovira</li>
+		</ul>
 	</section>
 </main>
 
