--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -1,5 +1,5 @@
 html, body {
-	font-family: Helvetica;
+	font-family: "Helvetica Neue", "Arial", "sans-serif";
 }
 
 
@@ -68,10 +68,12 @@ header {
 
 section#sidebar {
 	float: left;
+	margin-right: 15px;
 	padding: 10px;
 	width: 250px;
 	background-color: #fff;
 	border-radius: 5px;
+	border: 1px solid rgb(235, 235, 235);
 	overflow-y: scroll;
 
 	h4 {
@@ -95,12 +97,100 @@ section#sidebar {
 	}
 }
 
+
 section#main {
-	float: right;
-	width: calc(100% - 300px);
+	float: left;
+	margin-right: 15px;
+	width: calc(100% - 300px - 250px);
+	background-color: #fff;
+	border: 1px solid rgb(235, 235, 235);
+	border-radius: 5px;
 
 	h1 {
-		margin: 20px 0;
+		padding: 15px;
+		font-weight: normal;
+		font-size: 20px;
+		color: #66757f;
+		background-color: #E5F2F7;
+		border-bottom: 1px solid #e1e8ed;
+	}
+	div#best-dressed-images {
+		padding: 15px;
+		border-bottom: 1px solid #e1e8ed;
+
+		h2, h3 {
+			color: #444;
+		}
+		h2 {
+			font-size: 20px;
+		}
+		h3 {
+			font-size: 15px;
+		}
+	}
+}
+
+
+div#content {
+
+	div.data {
+		padding: 15px;
+		border-bottom: 1px solid #e1e8ed;
+		overflow: auto;
+
+		h2.dataaward {
+			font-size: 16px;
+			color: #444;
+		}
+		ul, ol {
+			float: left;
+			margin-right: 50px;
+
+			h3.awardcategory {
+				margin-top: 8px;
+				font-size: 14px;
+				color: #555;
+			}
+			li {
+				font-size: 13px;
+				color: #555;
+			}
+		}
+		ul {
+			width: 80px;
+			list-style: none;
+		}
+		ol {
+			width: 150px;
+
+			li {
+				margin-left: 17px;
+			}
+		}
+	}
+	div.data:hover {
+		background-color: #F7FCFC;
+	}
+}
+
+
+section#creators {
+	float: left;
+	padding: 10px;
+	width: 200px;
+	background-color: #fff;
+	border-radius: 5px;
+	border: 1px solid rgb(235, 235, 235);
+
+	h2 {
+		font-size: 16px;
+		color: #555;
+	}
+	ul {
+		padding-left: 15px;
+		list-style: none;
+		font-size: 12px;
+		color: #666;
 	}
 }
 
