--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="static/css/style.css">
-		<link rel="stylesheet" href="static/css/foundation.min.css">
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.js"></script>
     	<script src="http://cdnjs.cloudflare.com/ajax/libs/react/0.12.2/JSXTransformer.js"></script>
     	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
