--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,12 +21,12 @@ header {
   box-shadow: 0 1px 0px #aaa; }
   header div#header-inner {
     margin: 0 auto;
-    padding: 7px 0;
+    padding: 6px 0;
     width: 80%;
     overflow: auto; }
     header div#header-inner h1 {
       display: inline-block;
-      padding: 7px 0;
+      padding: 4px 0;
       font-size: 17px;
       color: #66757f; }
     header div#header-inner button {
@@ -76,7 +76,7 @@ section#sidebar {
 section#main {
   float: left;
   margin-right: 15px;
-  width: calc(100% - 300px - 250px);
+  width: calc(100% - 250px - 200px - 76px);
   background-color: #fff;
   border: 1px solid #ebebeb;
   border-radius: 5px; }
@@ -103,24 +103,29 @@ div#content div.data {
   overflow: auto; }
   div#content div.data h2.dataaward {
     font-size: 16px;
-    color: #444; }
+    color: #555; }
   div#content div.data ul, div#content div.data ol {
     float: left;
     margin-right: 50px; }
     div#content div.data ul h3.awardcategory, div#content div.data ol h3.awardcategory {
       margin-top: 8px;
       font-size: 14px;
-      color: #555; }
+      color: #666; }
+      div#content div.data ul h3.awardcategory i, div#content div.data ol h3.awardcategory i {
+        margin-right: 5px;
+        font-size: 13px; }
     div#content div.data ul li, div#content div.data ol li {
-      font-size: 13px;
+      font-size: 12px;
       color: #555; }
-  div#content div.data ul {
+  div#content div.data ul.winner {
     width: 80px;
     list-style: none; }
-  div#content div.data ol {
-    width: 150px; }
-    div#content div.data ol li {
+  div#content div.data ol.nominees {
+    width: 130px; }
+    div#content div.data ol.nominees li {
       margin-left: 17px; }
+  div#content div.data ul.presenters {
+    width: 100px; }
 div#content div.data:hover {
   background-color: #F7FCFC; }
 
