add 2013 data + frontend link id

--- a/templates/react.html
+++ b/templates/react.html
@@ -4,8 +4,8 @@
 <header>
 	<div id="header-inner">
 		<h1>Golden Globe Tweet Processing</h1>
-		<button id="2015">Process 2015 data</button>
-		<button id="2013">Process 2013 data</button>
+		<button class="submit" id="2015">Process 2015 data</button>
+		<button class="submit" id="2013">Process 2013 data</button>
 		<div class="load_wrapper">
 			<div class="loader"></div>
 		</div>
@@ -17,38 +17,39 @@
 	<section id="sidebar">
 		<h4>Meta Data</h4>
 		<ul>
-			<li>Hosts</li>
-			<li>Best dressed image feed</li>
+			<li id="host">Hosts</li>
+			<li id="best-dressed-submit">Best dressed image feed</li>
 		</ul>
 		<h4>Awards</h4>
 		<ul>
-			<li>All Awards</li>
-			<li>Best Motion Picture - Drama</li>
-			<li>Best Performance by an Actress in a Motion Picture - Drama</li>
-			<li>Best Performance by an Actor in a Motion Picture - Drama</li>
-			<li>Best Motion Picture - Comedy or Musical</li>
-			<li>Best Performance by an Actress in a Motion Picture - Comedy or Musical</li>
-			<li>Best Performance by an Actor in a Motion Picture - Comedy or Musical</li>
-			<li>Best Animated Feature Film</li>
-			<li>Best Foreign Language Film</li>
-			<li>Best Performance by an Actress in a Supporting Role in a Motion Picture</li>
-			<li>Best Performance by an Actor in a Supporting Role in a Motion Picture</li>
-			<li>Best Director - Motion Picture</li>
-			<li>Best Screenplay - Motion Picture</li>
-			<li>Best Original Score - Motion Picture</li>
-			<li>Best Original Song - Motion Picture</li>
-			<li>Best Television Series - Drama</li>
-			<li>Best Performance by an Actress in a Television Series - Drama</li>
-			<li>Best Performance by an Actor in a Television Series - Drama</li>
-			<li>Best Television Series - Comedy or Musical</li>
-			<li>Best Performance by an Actress in a Television Series - Comedy or Musical</li>
-			<li>Best Performance by an Actor in a Television Series - Comedy or Musical</li>
-			<li>Best Mini-Series or Motion Picture Made for Television</li>
-			<li>Best Performance by an Actress in a Mini-Series or Motion Picture Made for Television</li>
-			<li>Best Performance by an Actor in a Mini-Series or Motion Picture Made for Television</li>
-			<li>Best Performance by an Actress in a Supporting Role in a Series, Mini-Series, or Motion Picture Made for Television</li>
-			<li>Best Performance by an Actor in a Supporting Role in a Series, Mini-Series, or Motion Picture Made for Television</li>
-			<li>Cecil B. DeMille Award</li>
+			<li class="awards", id="all">All Awards</li>
+			<li class="awards", id="Best Motion Picture - Drama">Best Motion Picture - Drama</li>
+			<li class="awards", id="Best Performance by an Actress in a Motion Picture - Drama">Best Performance by an Actress in a Motion Picture - Drama</li>
+			<li class="awards", id="Best Performance by an Actor in a Motion Picture - Drama">Best Performance by an Actor in a Motion Picture - Drama</li>
+			<li class="awards", id="Best Motion Picture - Comedy Or Musical">Best Motion Picture - Comedy or Musical</li>
+			<li class="awards", id="Best Performance by an Actress in a Motion Picture - Comedy Or Musical">Best Performance by an Actress in a Motion Picture - Comedy or Musical</li>
+			<li class="awards", id="Best Performance by an Actor in a Motion Picture - Comedy Or Musical">Best Performance by an Actor in a Motion Picture - Comedy or Musical</li>
+			<li class="awards", id="Best Animated Feature Film">Best Animated Feature Film</li>
+			<li class="awards", id="Best Foreign Language Film">Best Foreign Language Film</li>
+			<li class="awards", id="Best Performance by an Actress In A Supporting Role in a Motion Picture">Best Performance by an Actress in a Supporting Role in a Motion Picture</li>
+
+			<li class="awards", id="Best Performance by an Actor In A Supporting Role in a Motion Picture">Best Performance by an Actor in a Supporting Role in a Motion Picture</li>
+			<li class="awards", id="Best Director - Motion Picture">Best Director - Motion Picture</li>
+			<li class="awards", id="Best Screenplay - Motion Picture">Best Screenplay - Motion Picture</li>
+			<li class="awards", id="Best Original Score - Motion Picture">Best Original Score - Motion Picture</li>
+			<li class="awards", id="Best Original Song - Motion Picture">Best Original Song - Motion Picture</li>
+			<li class="awards", id="Best Television Series - Drama">Best Television Series - Drama</li>
+			<li class="awards", id="Best Performance by an Actress in a Television Series - Drama">Best Performance by an Actress in a Television Series - Drama</li>
+			<li class="awards", id="Best Performance by an Actor in a Television Series - Drama">Best Performance by an Actor in a Television Series - Drama</li>
+			<li class="awards", id="Best Television Series - Comedy Or Musical">Best Television Series - Comedy or Musical</li>
+			<li class="awards", id="Best Performance by an Actress In A Television Series - Comedy Or Musical">Best Performance by an Actress in a Television Series - Comedy or Musical</li>
+			<li class="awards", id="Best Performance by an Actor In A Television Series - Comedy Or Musical">Best Performance by an Actor in a Television Series - Comedy or Musical</li>
+			<li class="awards", id="Best Mini-Series or Motion Picture Made for Television">Best Mini-Series or Motion Picture Made for Television</li>
+			<li class="awards", id="Best Performance by an Actress in a Mini-Series or Motion Picture Made for Television">Best Performance by an Actress in a Mini-Series or Motion Picture Made for Television</li>
+			<li class="awards", id="Best Performance by an Actor in a Mini-Series or Motion Picture Made for Television">Best Performance by an Actor in a Mini-Series or Motion Picture Made for Television</li>
+			<li class="awards", id="Best Performance by an Actress in a Supporting Role in a Series, Mini-Series or Motion Picture Made for Television">Best Performance by an Actress in a Supporting Role in a Series, Mini-Series, or Motion Picture Made for Television</li>
+			<li class="awards", id="Best Performance by an Actor in a Supporting Role in a Series, Mini-Series or Motion Picture Made for Television">Best Performance by an Actor in a Supporting Role in a Series, Mini-Series, or Motion Picture Made for Television</li>
+			<li class="awards", id="Cecil B. DeMille Award">Cecil B. DeMille Award</li>
 		</ul>
 	</section>
 
